@@ -11,3 +11,8 @@ SUBDIRS = context linked_scripts
 ##
 EXTRA_DIST = w32_wrapper
 
+## Tests
+##
+TESTS = tests/updmap-cmdline-test.pl
+EXTRA_DIST += $(TESTS)
+
