@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.9.
-.TH UPDMAP "1" "June 2012" "TeX Live" "User Commands"
+.TH UPDMAP "1" "August 2012" "TeX Live" "User Commands"
 .SH NAME
 updmap \- manage TeX font maps, per-user
 .br
@@ -11,7 +11,7 @@ updmap-sys \- manage TeX font maps, system-wide
 .B updmap-sys
 [\fIOPTION\fR] ... [\fICOMMAND\fR]
 .SH DESCRIPTION
-updmap (TeX Live, multi) version $Id: updmap.pl 26778 2012\-06\-01 17:36:30Z karl $
+updmap (TeX Live, multi) version $Id: updmap.pl 27264 2012\-07\-31 05:10:29Z preining $
 .PP
 Update the default font map files used by pdftex, dvips, and dvipdfm(x),
 and optionally pxdvi, as determined by all configuration files updmap.cfg
@@ -112,7 +112,7 @@ fonts worse than mode\-tuned Type 1 bitmap fonts.  So, MixedMap is used
 for fonts that are available as both Type 1 and Metafont.
 KanjiMap entries are added to psfonts_t1.map and kanjix.map.
 .PP
-Explanation of the OPTION names for \fB\-\-showoptions\fR, \fB\-\-showoptions\fR, \fB\-\-setoption\fR:
+Explanation of the OPTION names for \fB\-\-showoptions\fR, \fB\-\-showoption\fR, \fB\-\-setoption\fR:
 .TP
 dvipsPreferOutline
 true|false  (default true)
@@ -168,14 +168,44 @@ Explanation of trees and files normally used:
 .IP
 If \fB\-\-cnffile\fR is specified on the command line (possibly multiple
 times), its value(s) are used.  Otherwise, updmap reads all the
-updmap.cfg files found by running `kpsewhich \fB\-all\fR updmap.cfg',
-in the order returned by kpsewhich.  If multiple updmap.cfg files are
-found, all the maps mentioned in all the updmap.cfg files are merged.
+updmap.cfg files found by running `kpsewhich \fB\-all\fR updmap.cfg', in the
+order returned by kpsewhich, with one exception: an updmap.cfg found
+in TEXMFLOCAL is given higher priority than the updmap.cfg in
+TEXMFMAIN, to ensure that local adjustments by administrators take
+precedence over what is shipped in TeX Live.
 .IP
-There is one exception to keep upgradability from earlier versions of
-TeX Live: if a file TEXMFLOCAL/web2c/updmap\-local.cfg exists (formerly
-used by tlmgr to merge local fonts), then the file
-TEXMFLOCAL/web2c/updmap.cfg is ignored (if it exists) and the
+In any case, if multiple updmap.cfg files are found, all the maps
+mentioned in all the updmap.cfg files are merged.
+.IP
+Thus, if updmap.cfg files are present in all trees, and the default
+layout is used as shipped with TeX Live, the following files are
+read, in the given order.
+.nf
+.IP
+For updmap\-sys:
+TEXMFSYSCONFIG $TEXLIVE/YYYY/texmf\-config/web2c/updmap.cfg
+TEXMFSYSVAR    $TEXLIVE/YYYY/texmf\-var/web2c/updmap.cfg
+TEXMFLOCAL     $TEXLIVE/texmf\-local/web2c/updmap.cfg
+TEXMFMAIN      $TEXLIVE/YYYY/texmf/web2c/updmap.cfg
+TEXMFDIST      $TEXLIVE/YYYY/texmf\-dist/web2c/updmap.cfg
+.IP
+For updmap:
+TEXMFCONFIG    $HOME/.texliveYYYY/texmf\-config/web2c/updmap.cfg
+TEXMFVAR       $HOME/.texliveYYYY/texmf\-var/web2c/updmap.cfg
+TEXMFHOME      $HOME/texmf/web2c/updmap.cfg
+TEXMFSYSCONFIG $TEXLIVE/YYYY/texmf\-config/web2c/updmap.cfg
+TEXMFSYSVAR    $TEXLIVE/YYYY/texmf\-var/web2c/updmap.cfg
+TEXMFLOCAL     $TEXLIVE/texmf\-local/web2c/updmap.cfg
+TEXMFMAIN      $TEXLIVE/YYYY/texmf/web2c/updmap.cfg
+TEXMFDIST      $TEXLIVE/YYYY/texmf\-dist/web2c/updmap.cfg
+.IP
+(where YYYY is the TeX Live release version).
+.fi
+.IP
+There is another exception to keep upgradability from earlier versions
+of TeX Live: if a file TEXMFLOCAL/web2c/updmap\-local.cfg exists
+(formerly used by tlmgr to merge local fonts), then the file
+TEXMFLOCAL/web2c/updmap.cfg is ignored (if it exists) and that
 updmap\-local.cfg is used instead.  In this case, updmap recognizes the
 previous syntax for disabling map files in updmap\-local.cfg (this
 syntax is different from what is used now).
@@ -188,7 +218,7 @@ line, then the first one given will be used to save any changes from
 \fB\-\-setoption\fR, \fB\-\-enable\fR or \fB\-\-disable\fR.  If the config files are taken
 from kpsewhich output, then the algorithm is more complex:
 .IP
-1) If $TEXMFHOME/web2c/updmap.cfg or $TEXMFCONFIG/web2c/updmap.cfg
+1) If $TEXMFCONFIG/web2c/updmap.cfg or $TEXMFHOME/web2c/updmap.cfg
 appears in the list of used files, then the one listed first by
 kpsewhich \fB\-\-all\fR (equivalently, the one returned by kpsewhich
 updmap.cfg), is used.
@@ -196,11 +226,11 @@ updmap.cfg), is used.
 2) If neither of the above two are present and changes are made, a
 new config file is created in $TEXMFCONFIG/web2c/updmap.cfg.
 .IP
-Multiple definitions of a font:
+Resolving multiple definitions of a font:
 .IP
 If a font is defined in more than one map file, then the definition
 coming from the first\-listed updmap.cfg is used.  If a font is
-defined multiple times in the same map file, one is chosen
+defined multiple times within the same map file, one is chosen
 arbitrarily.  In both cases a warning is issued.
 .IP
 Disabling maps:
